fixed spacing issue between story, pub date; increased margin-top for factbox heds

--- a/static/css/en-style.css
+++ b/static/css/en-style.css
@@ -330,7 +330,7 @@ table {
 .details-factbox-container-new {
 	font-family: Arial, sans-serif;
 	width: 100%;
-	margin-top:3%;
+	margin-top:4%;
 	}
 
 .details-factbox-container-new ul {
